fix tabble wrap

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -100,3 +100,8 @@ body {
 .xe-widget.xe-counter, .xe-widget.xe-counter-block .xe-upper, .xe-widget.xe-progress-counter .xe-upper {
   padding: 0px !important;
 }
+
+.table {
+  table-layout: fixed;
+  word-wrap: break-word;
+}
